# metis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-product-site.yml  docs.yml  publish.yml
apps/cli/: pyproject.toml
apps/cli/src/metis_cli/: audit.py  backup.py  billing_admin.py  chat.py  customer_report.py  main.py  models_display.py  runtime.py  serve.py  trace_admin.py  trial.py  trial_status.py  user.py
apps/cli/src/metis_cli/tui/: __init__.py  app.py
apps/cli/tests/: test_audit_cli.py  test_audit_redact_cli.py  test_auto_alias.py  test_backup_cli.py  test_benchmark.py  test_customer_report_cli.py  test_file_logging.py  test_main.py  test_models_display.py  test_trace_prune_cli.py  test_trace_vacuum_cli.py  test_trial_cli.py  test_trial_status_cli.py  test_user_cli.py
apps/cli/tests/tui/: test_app.py
apps/gateway/: pyproject.toml
apps/gateway/src/metis_gateway/: __init__.py  app.py  auth.py  cli.py  extensions.py  harness.py  issue_key.py  keystore_admin.py  middleware_ratelimit.py  middleware_versioning.py  quotas.py  runtime.py  signup.py  translators.py
apps/gateway/src/metis_gateway/billing/: __init__.py  backend.py  client.py  config.py  routes.py  state.py  store.py  subscriptions.py  webhooks.py
apps/gateway/src/metis_gateway/endpoints/: __init__.py  anthropic.py
apps/gateway/tests/: conftest.py  test_anthropic_endpoint.py  test_app_http.py  test_auth.py  test_cancellation.py  test_issue_key.py  test_keystore_admin.py  test_metrics_endpoint_gateway.py  test_middleware_ratelimit.py  test_middleware_versioning.py  test_model_normalization.py  test_quotas.py  test_run_gateway_bind.py  test_signup.py  test_streaming.py  test_translators.py
apps/gateway/tests/test_billing/: conftest.py  test_billing_store.py  test_fake_client.py  test_quota_composition.py  test_self_service.py  test_subscription_happy_path.py  test_webhooks.py
apps/server/: pyproject.toml
apps/server/src/metis_server/: __init__.py  analytics.py  app.py  confirmations.py  errors.py  hub.py  middleware_versioning.py  streaming.py  tokens.py  turns.py
apps/server/src/metis_server/static/: app.js  index.html  style.css
apps/server/tests/: conftest.py  test_analytics_http.py  test_confirmations.py  test_http.py  test_hub.py  test_metrics_endpoint_server.py  test_tokens.py  test_turn_streaming.py  test_user_export_http.py  test_versioning_middleware.py  test_websocket.py
benchmarks/: README.md  RESULTS.md
benchmarks/customers/: .gitignore  README.md
benchmarks/workloads-trial/: README.md
docs/: KNOWN_ISSUES.md  STRATEGY.md  business-model.md  customer-trial-recipe.md  gateway-client-quickstart.md  gateway-deployment.md  index.md  project-overview.md  savings-demo.md  standard-model-profiles.md
docs/design/: token-reduction-strategy.md  wave-18-agent-dispatch.md
docs/market-research/: 01-coding-agents.md  02-local-first-platforms.md  03-routing-layers.md  04-skills-and-memory.md  synthesis.md
docs/operations/: billing-operator-guide.md  compliance-overview.md  concierge-onboarding.md  first-customer-runbook.md  ga-readiness-audit.md  incident-response.md  launch-day-playbook.md  observability-runbook.md  phase-claim-proposal.md  pre-launch-dry-run-checklist.md  quickstart.md  repo-split-plan.md  sla-template.md  soc2-readiness.md  status-page-config.yaml  status-page.md  support-channels.md  trace-performance.md  upgrade-guide.md
docs/sales/: case-study-content-platform-template.md  case-study-dev-tools-company-template.md  case-study-startup-saas-template.md  case-study-template.md  competitive-comparison.md  faq.md  objection-handling.md  one-pager.md
docs/specs/: CHANGES.md  analytics-api.md  api-versioning.md  audit-log.md  benchmark.md  canonical-message-format.md  context-assembler.md  credentials.md  delegation.md  deployment-shape.md  evaluator.md  event-bus-and-trace-catalog.md  gateway-hardening.md  gateway.md  memory-store.md  multi-user.md  observability.md  pattern-store.md  pricing.md  project-overview.md  provider-adapter-contract.md  redaction.md  routing-engine.md  server-api.md  session-compaction.md  skill-curator.md  skill-format.md  streaming-protocol.md  tool-dispatcher.md  trace-retention.md
examples/gateway/: anthropic-python.py  curl-smoke.sh  openai-python.py
infra/docs/: Dockerfile  entrypoint.sh
infra/gateway/: Dockerfile  entrypoint.sh
product-site/: HOSTING.md  astro.config.mjs  package-lock.json  package.json
product-site/infra/: .gitignore  cdk.json  package-lock.json  package.json
product-site/src/: content.config.ts
scripts/: bench_trace_throughput.py  benchmark.py  smoke.py  smoke_cache.py  smoke_cross_provider.py  smoke_eval.py  smoke_openrouter_cache.py
site/: 404.html  index.html  sitemap.xml
site/KNOWN_ISSUES/: index.html
tests_shared/: scripted_adapter.py
(+281 files in other folders)
