[project]
name = "metis"
version = "0.1.0"
description = "Metis monorepo root: metis-core library, metis-server HTTP/WS surface, metis-gateway transparent proxy, metis-cli (chat/tui/serve/gateway)."
authors = [
    { name = "David Ji", email = "david.ji.2814@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "metis-core",
    "metis-server",
    "metis-gateway",
    "metis-cli",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
metis-core = { workspace = true }
metis-server = { workspace = true }
metis-gateway = { workspace = true }
metis-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = [
    "packages/metis-core/tests",
    "apps/server/tests",
    "apps/gateway/tests",
    "apps/cli/tests",
]
asyncio_mode = "auto"
