[project]
name = "metis-workspace"
version = "0.1.0"
description = "Metis monorepo root. The shipped package is `metis` under packages/metis/."
authors = [
    { name = "David Ji", email = "david.ji.2814@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "metis",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/metis"]

[tool.uv.sources]
metis = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = [
    "packages/metis/tests",
]
asyncio_mode = "auto"
